--- a/vercel.json
+++ b/vercel.json
@@ -2,5 +2,5 @@
   "version": 2,
   "name": "nodejs-to-do-list",
   "builds": [{ "src": "src/server.js", "use": "@vercel/node" }],
-  "routes": [{ "src": "/(.*)", "dest": "src/server.js" }]
+  "routes": [{ "src": "/(.*)", "dest": "/src/server.js" }]
 }
